--- a/style.css
+++ b/style.css
@@ -172,9 +172,9 @@ nav a.active::after {
   z-index: 1;
 }
 
-/* .hero-overlay {
+.hero-overlay {
   position: relative;
-  z-index: 2;
+  z-index: 4;
   background: rgba(73, 0, 168, 0.43); 
   padding: 50px 8%;
   border-radius: 16px;
@@ -182,7 +182,7 @@ nav a.active::after {
   box-shadow: 0 8px 24px rgba(0,0,0,0.25);
   max-width: 750px;
   margin: 0 auto;
-} */
+}
 
 .hero h1 {
   font-size: 2.6rem;
